ARKANE-1636 upgrade spring deps

--- a/provider-litecoin/pom.xml
+++ b/provider-litecoin/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>bitcoinj-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.madgag.spongycastle</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lambdaworks</groupId>
+            <artifactId>scrypt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.briandilley.jsonrpc4j</groupId>
             <artifactId>jsonrpc4j</artifactId>
             <version>1.5.3</version>
