--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.10.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -62,15 +62,15 @@
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <spring-boot-starter.version>2.1.6.RELEASE</spring-boot-starter.version>
         <assertj-core.version>3.11.1</assertj-core.version>
         <neow3j.version>2.3.1</neow3j.version>
         <typetools.version>0.5.0</typetools.version>
         <bitcoinj.version>0.14.7</bitcoinj.version>
-        <spring-cloud-dependencies.version>Greenwich.SR3</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Hoxton.SR3</spring-cloud-dependencies.version>
         <guava.version>27.0.1-jre</guava.version>
         <arkane-common.version>0.0.1-SNAPSHOT</arkane-common.version>
-        <spring-cloud-sleuth.version>2.1.6.RELEASE</spring-cloud-sleuth.version>
+        <spring-cloud-sleuth.version>2.2.2.RELEASE</spring-cloud-sleuth.version>
+        <spongycastle.version>1.58.0.0</spongycastle.version>
     </properties>
 
     <dependencies>
@@ -129,9 +129,44 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>com.madgag.spongycastle</groupId>
+                <artifactId>core</artifactId>
+                <version>${spongycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lambdaworks</groupId>
+                <artifactId>scrypt</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.madgag.spongycastle</groupId>
+                <artifactId>prov</artifactId>
+                <version>${spongycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okio</groupId>
+                <artifactId>okio</artifactId>
+                <version>2.5.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>2.7.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>1.3.71</version>
+            </dependency>
+            <dependency>
                 <groupId>network.arkane.blockchain-providers</groupId>
                 <artifactId>provider-api</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.4.1</version>
             </dependency>
             <dependency>
                 <groupId>network.arkane.blockchain-providers</groupId>
@@ -237,18 +272,6 @@
                 <groupId>com.mashape.unirest</groupId>
                 <artifactId>unirest-java</artifactId>
                 <version>${unirest-java.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-                <version>${spring-boot-starter.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring-boot-starter.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.web3j</groupId>
